src/style/app.css
/* External Fonts  */

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600;700&family=Zen+Antique&display=swap');
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap');

/* ----- RESET -----  */

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements  */
ul,
ol {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* Custom Properties  */
:root {
  --clr-main: #435;
  --clr-complementary: #e3ced7;
  --clr-light: #f1f3f6;
  --clr-accent: #1662a6;
  --clr-accent-light: #50a5f2;
  --text-color: #faebd7;
  --slot-size: 100px;
  --mini-slot-size: 50px;
}

/* ----- STYLES -----  */

html {
  background-color: var(--clr-accent);
}

body {
  font-family: 'Montserrat', sans-serif;
}

/* Utilities  */
.centered {
  text-align: center;
}

nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 2rem;
  background-color: var(--clr-main);
  color: var(--text-color);
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.33);
}

.brand {
  /* font-family: 'Zen Antique', serif; */
  font-size: 1.4rem;
  font-weight: 600;
}

#logo {
  display: inline-block;
  width: 24px;
  height: 24px;
  filter: invert(0.72);
  margin-right: 0.3rem;
  margin-bottom: -3px;
}

.brand .title {
  font-size: 1.5rem;
  font-weight: 700;
  color: var(--clr-accent);
}

/* Main  */

main {
  margin-top: 50px;
  padding: 2rem;
}

section {
  background: var(--clr-complementary);
}

h1,
h2 {
  color: var(--text-color);
}

.pallete-pane {
  display: flex;
  justify-content: center;
  gap: 1.75rem;
  border: 1px solid var(--clr-main);
  border-radius: 0.5rem;
  padding: 0.5rem;
}

.main-color-box {
  width: 100%;
  height: 100%;
  margin-bottom: 2rem;
  padding: 10px;
  color: var(--text-color);
  background-color: var(--clr-main);
  border-radius: 0.5rem;
  border: 1px solid var(--clr-main);
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.75rem;
}

.main-color-box input {
  padding-inline: 6px;
  flex: 1;
}

.slot-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.color-slot {
  width: var(--slot-size);
  height: var(--slot-size);
  border: 1px solid var(--clr-main);
  border-radius: 0.25rem;
  background-color: var(--clr-light);
  display: flex;
  gap: 5px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 0.65rem;
  margin-bottom: 1rem;
}

.slot-buttons {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 0.75rem;
}

.generate-color {
  font-size: 0.75rem;
  cursor: pointer;
  background-color: var(--clr-accent-light);
  color: var(--text-color);
  border: 1px solid var(--clr-accent-light);
  flex: 1;
  padding: 0.3rem;
}

.generate-color:hover {
  background-color: var(--clr-accent-light);
  border: 1px solid var(--clr-light);
  color: var(--clr-main);
}

.generate-color:active {
  color: var(--clr-light);
}

button[disabled] {
  cursor: not-allowed;
  color: var(--clr-complementary);
}

.label {
  color: var(--clr-accent);
  font-size: 0.9rem;
  padding: 4px;
}

.label input {
  background: var(--clr-complementary);
  max-width: 44%;
  border: 0;
  border-radius: 5px;
  cursor: pointer;
}

.label:hover input {
  background: var(--clr-light);
}

.edit-label {
  margin-left: 5px;
}

.mini-slots {
  border: 1px solid var(--clr-main);
  padding: 1rem 2rem;
  border-radius: 0.5rem;
  margin-top: 5px;
  display: grid;
  grid-template-columns: repeat(auto-fill, var(--mini-slot-size));
  gap: 1.5rem;
}

.mini-slot {
  width: var(--mini-slot-size);
  height: var(--mini-slot-size);
  border: 1px solid black;
  border-radius: 50%;
  cursor: pointer;
}

.copied {
  outline: #50a5f2 solid 5px;
}

.input {
  display: flex;
  background: white;
  padding: 2px;
  border-radius: 2px;
  align-items: center;
}

.input input {
  background: transparent;
  border: 0;
}

.input button {
  padding: 3px;
  border: 0;
  background: transparent;
  cursor: pointer;
  color: var(--clr-accent-light);
}

.utility-buttons {
  margin-top: 2rem;
}

.utility-buttons button {
  font-size: 1.1rem;
}

/* Modal */
.modal-mask {
  position: fixed;
  z-index: 9998;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.65);
  display: table;
}

.modal-wrapper {
  display: table-cell;
  vertical-align: middle;
}

.modal-container {
  width: max-content;
  margin: 0px auto;
  padding: 20px 30px;
  background-color: var(--clr-accent);
  color: var(--text-color);
  border-radius: 2px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
  font-family: Helvetica, Arial, sans-serif;
}

.modal-header {
  border-bottom: 1px solid var(--clr-main);
}

.modal-header h3 {
  margin-top: 0;
  color: var(--clr-complementary);
}

.modal-body {
  margin: 20px auto;
  text-align: center;
}

.modal-buttons .generate-color,
.modal-footer .generate-color {
  text-align: center;
  color: var(--text-color);
  padding: 0.5rem 1rem;
  margin-right: 0.1rem;
}

.pre {
  border: 1px solid var(--clr-main);
  text-align: left;
  padding: 1rem;
  background-color: var(--clr-main);
  margin-top: 1.5rem;
  -webkit-user-select: all; /* for Safari */
  user-select: all;
  cursor: pointer;
}

.pre p {
  font-family: 'JetBrains Mono', monospace;
  font-size: 0.8rem;
  line-height: 1.4rem;
}

.msg {
  font-size: 0.8rem;
  color: var(--clr-complementary);
  margin-left: 1rem;
}

/*
 * The following styles are auto-applied to elements with
 * transition="modal" when their visibility is toggled
 * by Vue.js.
 *
 * You can easily play with the modal transition by editing
 * these styles.
 */

.modal-enter-active,
.modal-leave-active {
  transition: opacity 0.5s ease, transform 0.3s ease-out;
}

.modal-enter-from,
.modal-leave-to {
  opacity: 0;
  transform: translateX(-100%);
}

.color-controls {
  width: min-content;
  border: 1px solid var(--clr-main);
  border-radius: 6px;
  padding: 0.5rem;
}

.color-controls fieldset {
  border: 0;
  padding: 0;
  margin: 0;
}

.color-controls input {
  max-width: 65%;
}

.control-field {
  display: flex;
  justify-content: space-between;
}

